[gd_scene load_steps=2 format=3 uid="uid://ynhgacghc763"]

[ext_resource type="Script" uid="uid://cd8xnjo1lenpx" path="res://UI/VarList/Vars/vec_3_var.gd" id="1_qt7oa"]

[node name="Vec3Var" type="VBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_qt7oa")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Label"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
allow_greater = true
allow_lesser = true
update_on_text_changed = true

[node name="SpinBox2" type="SpinBox" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
allow_greater = true
allow_lesser = true
update_on_text_changed = true

[node name="SpinBox3" type="SpinBox" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
allow_greater = true
allow_lesser = true
update_on_text_changed = true

[connection signal="value_changed" from="HBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="HBoxContainer/HBoxContainer/SpinBox2" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="HBoxContainer/HBoxContainer/SpinBox3" to="." method="_on_spin_box_value_changed"]
